--- a/demo/tinyPlatformer/controller.css
+++ b/demo/tinyPlatformer/controller.css
@@ -10,11 +10,11 @@ html, body {
 
   .container {
     display: grid;
-    grid-template-columns: 10% 10% 10% 30% 15% 15%;
-    grid-template-rows: 15% 15% 15% 15% 15% 15%; 
-    background-color:#000000;
-    height: 90%;
-    width: 90%;
+    grid-template-columns: 15% 10% 15% 25% 15% 15%;
+    grid-template-rows: 15% 15% 15% 15% 15% 20%; 
+    background-color: black;
+    height: 99%;
+    width: 99%;
   
     align-content: center;
     position:relative;
