--- a/demo/tinyPlatformer/controller.css
+++ b/demo/tinyPlatformer/controller.css
@@ -10,9 +10,9 @@ html, body {
 
   .container {
     display: grid;
-    grid-template-columns: 15% 10% 15% 25% 15% 15%;
-    grid-template-rows: 15% 15% 15% 15% 15% 20%; 
-    background-color: black;
+    grid-template-columns: 10% 10% 10% 30% 15% 15%;
+    grid-template-rows: 15% 15% 15% 15% 15% 15%; 
+    background-color:#000000;
     height: 99%;
     width: 99%;
   
